v1.0.0/modules/schema/pages/class/MaintenanceWorkTask.adoc
= `MaintenanceWorkTask`
:toclevels: 4


+++Maintenance work task.  Costs associated with this are considered preventive maintenance (PM) costs.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MaintenanceWorkTask`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** xref::class/BaseWork.adoc[`BaseWork`]
**** xref::class/WorkTask.adoc[`WorkTask`]
***** *`MaintenanceWorkTask`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MaintenanceWorkTask {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}













TroubleOrder {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



MaterialItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Crew {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingPlan {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProcedureDataSet {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Work {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Priority {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WorkTimeSchedule {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WorkLocation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WorkActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Author {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Editor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Approver {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Issuer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}









MaintenanceWorkTask -> TroubleOrder: TroubleOrder


MaintenanceWorkTask -> Asset: Assets


MaintenanceWorkTask -> MaterialItem: MaterialItems


MaintenanceWorkTask -> Crew: Crews


MaintenanceWorkTask -> Asset: OldAsset


MaintenanceWorkTask -> SwitchingPlan: SwitchingPlan


MaintenanceWorkTask -> ProcedureDataSet: ProcedureDataSet


MaintenanceWorkTask -> Work: Work


MaintenanceWorkTask -> Priority: priority


MaintenanceWorkTask -> WorkTimeSchedule: TimeSchedules


MaintenanceWorkTask -> WorkLocation: WorkLocation


MaintenanceWorkTask -> WorkActivityRecord: WorkActivityRecords


MaintenanceWorkTask -> Status: docStatus


MaintenanceWorkTask -> ElectronicAddress: electronicAddress


MaintenanceWorkTask -> Status: status


MaintenanceWorkTask -> ActivityRecord: ActivityRecord


MaintenanceWorkTask -> ConfigurationEvent: ConfigurationEvents


MaintenanceWorkTask -> Author: Author


MaintenanceWorkTask -> Editor: Editor


MaintenanceWorkTask -> Approver: Approver


MaintenanceWorkTask -> Issuer: Issuer


MaintenanceWorkTask -> DiagramObject: DiagramObjects


MaintenanceWorkTask -> InstanceSet: InstanceSet


MaintenanceWorkTask -> Name: Names


MaintenanceWorkTask -> ChangeSetMember: PropertiesCIMDataObject


MaintenanceWorkTask -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Work,`Work`>>
| 1
| xref::class/Work.adoc[`Work`]
| +++Work this task belongs to.+++

| <<breakerMaintenanceKind,`breakerMaintenanceKind`>>
| 0..1
| xref::enumeration/BreakerMaintenanceKind.adoc[`BreakerMaintenanceKind`]
| +++Kind of breaker maintenance performed by this maintenance work task.+++

| <<transformerMaintenanceKind,`transformerMaintenanceKind`>>
| 0..1
| xref::enumeration/TransformerMaintenanceKind.adoc[`TransformerMaintenanceKind`]
| +++Kind of transformer maintenance performed by this maintenance work task.+++

| <<Approver,`Approver`>>
| 0..1
| xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++

| <<Author,`Author`>>
| 0..1
| xref::class/Author.adoc[`Author`]
| +++Author of this document.+++

| <<Editor,`Editor`>>
| 0..1
| xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++

| <<Issuer,`Issuer`>>
| 0..1
| xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SwitchingPlan,`SwitchingPlan`>>
| 0..1
| xref::class/SwitchingPlan.adoc[`SwitchingPlan`]
| +++Switching plan executed by this work task.+++

| <<TroubleOrder,`TroubleOrder`>>
| 0..1
| xref::class/TroubleOrder.adoc[`TroubleOrder`]
| +++The trouble order that contains the work tasks.+++

| <<WorkLocation,`WorkLocation`>>
| 0..1
| xref::class/WorkLocation.adoc[`WorkLocation`]
| +++Location for this work/task.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<authorName,`authorName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++

| <<comment,`comment`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++

| <<completedDateTime,`completedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time work task was completed.+++

| <<contractorCost,`contractorCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Total contractor costs associated with the work task.+++

| <<createdDateTime,`createdDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++

| <<crewETA,`crewETA`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Estimated time of arrival, so that customer or police/fire department can be informed when the crew will arrive.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<docStatus,`docStatus`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<estimatedCompletionTime,`estimatedCompletionTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Time and Date when the work task will be completed.+++

| <<instruction,`instruction`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Instructions for performing this task.+++

| <<kind,`kind`>>
| 0..1
| xref::enumeration/ServiceRequestKind.adoc[`ServiceRequestKind`]
| +++Kind of work.+++

| <<laborCost,`laborCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Total labor costs associated with the work task.+++

| <<laborHours,`laborHours`>>
| 0..1
| xref::class/Hours.adoc[`Hours`]
| +++Hours of labor expended under work task.+++

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<materiallCost,`materiallCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Total material costs associated with the work task.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<priority,`priority`>>
| 0..1
| xref::class/Priority.adoc[`Priority`]
| +++Priority of work.+++

| <<revisionNumber,`revisionNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++

| <<schedOverride,`schedOverride`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++If specified, override schedule and perform this task in accordance with instructions specified here.+++

| <<startedDateTime,`startedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time work task was started.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

| <<statusKind,`statusKind`>>
| 0..1
| xref::enumeration/WorkStatusKind.adoc[`WorkStatusKind`]
| +++Kind of work status.+++

| <<subject,`subject`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document subject.+++

| <<taskKind,`taskKind`>>
| 0..1
| xref::enumeration/WorkTaskKind.adoc[`WorkTaskKind`]
| +++Kind of work.+++

| <<title,`title`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document title.+++

| <<toolCost,`toolCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Total tool costs associated with the work task.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

| <<ActivityRecord,`ActivityRecord`>>
| 0..*
| xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets on which this non-replacement work task is performed.+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++

| <<Crews,`Crews`>>
| 0..*
| xref::class/Crew.adoc[`Crew`]
| +++All crews participating in this work task.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<MaterialItems,`MaterialItems`>>
| 0..*
| xref::class/MaterialItem.adoc[`MaterialItem`]
| +++The material items that are required to perform the work task.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<OldAsset,`OldAsset`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++Old asset replaced by this work task.+++

| <<ProcedureDataSet,`ProcedureDataSet`>>
| 0..*
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]
| +++Procedure data set associated with this work task.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<TimeSchedules,`TimeSchedules`>>
| 0..*
| xref::class/WorkTimeSchedule.adoc[`WorkTimeSchedule`]
| +++All time schedules for this work or work task.+++

| <<WorkActivityRecords,`WorkActivityRecords`>>
| 0..*
| xref::class/WorkActivityRecord.adoc[`WorkActivityRecord`]
| +++All activity records for this work or work task.+++
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets on which this non-replacement work task is performed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#breakerMaintenanceKind]
=== `breakerMaintenanceKind`
+++Kind of breaker maintenance performed by this maintenance work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MaintenanceWorkTask.breakerMaintenanceKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/BreakerMaintenanceKind.adoc[`BreakerMaintenanceKind`]


|===

//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#completedDateTime]
=== `completedDateTime`
+++Date and time work task was completed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.completedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#contractorCost]
=== `contractorCost`
+++Total contractor costs associated with the work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.contractorCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#crewETA]
=== `crewETA`
+++Estimated time of arrival, so that customer or police/fire department can be informed when the crew will arrive.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.crewETA`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#Crews]
=== `Crews`
+++All crews participating in this work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.Crews`
| Cardinality
| 0..*
| Type
| xref::class/Crew.adoc[`Crew`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#estimatedCompletionTime]
=== `estimatedCompletionTime`
+++Time and Date when the work task will be completed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.estimatedCompletionTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#instruction]
=== `instruction`
+++Instructions for performing this task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.instruction`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#kind]
=== `kind`
+++Kind of work.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/ServiceRequestKind.adoc[`ServiceRequestKind`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

//[discrete]
[#laborCost]
=== `laborCost`
+++Total labor costs associated with the work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.laborCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#laborHours]
=== `laborHours`
+++Hours of labor expended under work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.laborHours`
| Cardinality
| 0..1
| Type
| xref::class/Hours.adoc[`Hours`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#MaterialItems]
=== `MaterialItems`
+++The material items that are required to perform the work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.MaterialItems`
| Cardinality
| 0..*
| Type
| xref::class/MaterialItem.adoc[`MaterialItem`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#materiallCost]
=== `materiallCost`
+++Total material costs associated with the work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.materiallCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OldAsset]
=== `OldAsset`
+++Old asset replaced by this work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.OldAsset`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#priority]
=== `priority`
+++Priority of work.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.priority`
| Cardinality
| 0..1
| Type
| xref::class/Priority.adoc[`Priority`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

//[discrete]
[#ProcedureDataSet]
=== `ProcedureDataSet`
+++Procedure data set associated with this work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.ProcedureDataSet`
| Cardinality
| 0..*
| Type
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#schedOverride]
=== `schedOverride`
+++If specified, override schedule and perform this task in accordance with instructions specified here.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.schedOverride`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#startedDateTime]
=== `startedDateTime`
+++Date and time work task was started.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.startedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#statusKind]
=== `statusKind`
+++Kind of work status.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.statusKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/WorkStatusKind.adoc[`WorkStatusKind`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

//[discrete]
[#subject]
=== `subject`
+++Document subject.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#SwitchingPlan]
=== `SwitchingPlan`
+++Switching plan executed by this work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.SwitchingPlan`
| Cardinality
| 0..1
| Type
| xref::class/SwitchingPlan.adoc[`SwitchingPlan`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#taskKind]
=== `taskKind`
+++Kind of work.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.taskKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/WorkTaskKind.adoc[`WorkTaskKind`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#TimeSchedules]
=== `TimeSchedules`
+++All time schedules for this work or work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.TimeSchedules`
| Cardinality
| 0..*
| Type
| xref::class/WorkTimeSchedule.adoc[`WorkTimeSchedule`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

//[discrete]
[#title]
=== `title`
+++Document title.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#toolCost]
=== `toolCost`
+++Total tool costs associated with the work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.toolCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#transformerMaintenanceKind]
=== `transformerMaintenanceKind`
+++Kind of transformer maintenance performed by this maintenance work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MaintenanceWorkTask.transformerMaintenanceKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/TransformerMaintenanceKind.adoc[`TransformerMaintenanceKind`]


|===

//[discrete]
[#TroubleOrder]
=== `TroubleOrder`
+++The trouble order that contains the work tasks.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.TroubleOrder`
| Cardinality
| 0..1
| Type
| xref::class/TroubleOrder.adoc[`TroubleOrder`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Work]
=== `Work`
+++Work this task belongs to.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.Work`
| Cardinality
| 1
| Type
| xref::class/Work.adoc[`Work`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

//[discrete]
[#WorkActivityRecords]
=== `WorkActivityRecords`
+++All activity records for this work or work task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.WorkActivityRecords`
| Cardinality
| 0..*
| Type
| xref::class/WorkActivityRecord.adoc[`WorkActivityRecord`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

//[discrete]
[#WorkLocation]
=== `WorkLocation`
+++Location for this work/task.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.WorkLocation`
| Cardinality
| 0..1
| Type
| xref::class/WorkLocation.adoc[`WorkLocation`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===


