v1.1.0/modules/schema/pages/class/MaintenanceWorkTask.adoc
= `MaintenanceWorkTask`
:toclevels: 4


+++Maintenance work task.  Costs associated with this are considered preventive maintenance (PM) costs.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MaintenanceWorkTask`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** xref::class/BaseWork.adoc[`BaseWork`]
**** xref::class/WorkTask.adoc[`WorkTask`]
***** *`MaintenanceWorkTask`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<breakerMaintenanceKind,`breakerMaintenanceKind`>>
//| [[slots_table.breakerMaintenanceKind]]<<breakerMaintenanceKind,`breakerMaintenanceKind`>>
| 0..1 +
xref::enumeration/BreakerMaintenanceKind.adoc[`BreakerMaintenanceKind`]
| +++Kind of breaker maintenance performed by this maintenance work task.+++
| _n/a_

| <<transformerMaintenanceKind,`transformerMaintenanceKind`>>
//| [[slots_table.transformerMaintenanceKind]]<<transformerMaintenanceKind,`transformerMaintenanceKind`>>
| 0..1 +
xref::enumeration/TransformerMaintenanceKind.adoc[`TransformerMaintenanceKind`]
| +++Kind of transformer maintenance performed by this maintenance work task.+++
| _n/a_

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets on which this non-replacement work task is performed.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<Crews,`Crews`>>
//| [[slots_table.Crews]]<<Crews,`Crews`>>
| 0..* +
xref::class/Crew.adoc[`Crew`]
| +++All crews participating in this work task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<MaterialItems,`MaterialItems`>>
//| [[slots_table.MaterialItems]]<<MaterialItems,`MaterialItems`>>
| 0..* +
xref::class/MaterialItem.adoc[`MaterialItem`]
| +++The material items that are required to perform the work task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<OldAsset,`OldAsset`>>
//| [[slots_table.OldAsset]]<<OldAsset,`OldAsset`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++Old asset replaced by this work task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<ProcedureDataSet,`ProcedureDataSet`>>
//| [[slots_table.ProcedureDataSet]]<<ProcedureDataSet,`ProcedureDataSet`>>
| 0..* +
xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]
| +++Procedure data set associated with this work task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<SwitchingPlan,`SwitchingPlan`>>
//| [[slots_table.SwitchingPlan]]<<SwitchingPlan,`SwitchingPlan`>>
| 0..1 +
xref::class/SwitchingPlan.adoc[`SwitchingPlan`]
| +++Switching plan executed by this work task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<TroubleOrder,`TroubleOrder`>>
//| [[slots_table.TroubleOrder]]<<TroubleOrder,`TroubleOrder`>>
| 0..1 +
xref::class/TroubleOrder.adoc[`TroubleOrder`]
| +++The trouble order that contains the work tasks.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<Work,`Work`>>
//| [[slots_table.Work]]<<Work,`Work`>>
| 1 +
xref::class/Work.adoc[`Work`]
| +++Work this task belongs to.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<completedDateTime,`completedDateTime`>>
//| [[slots_table.completedDateTime]]<<completedDateTime,`completedDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time work task was completed.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<contractorCost,`contractorCost`>>
//| [[slots_table.contractorCost]]<<contractorCost,`contractorCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Total contractor costs associated with the work task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<crewETA,`crewETA`>>
//| [[slots_table.crewETA]]<<crewETA,`crewETA`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Estimated time of arrival, so that customer or police/fire department can be informed when the crew will arrive.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<estimatedCompletionTime,`estimatedCompletionTime`>>
//| [[slots_table.estimatedCompletionTime]]<<estimatedCompletionTime,`estimatedCompletionTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Time and Date when the work task will be completed.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<instruction,`instruction`>>
//| [[slots_table.instruction]]<<instruction,`instruction`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Instructions for performing this task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<laborCost,`laborCost`>>
//| [[slots_table.laborCost]]<<laborCost,`laborCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Total labor costs associated with the work task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<laborHours,`laborHours`>>
//| [[slots_table.laborHours]]<<laborHours,`laborHours`>>
| 0..1 +
xref::class/Hours.adoc[`Hours`]
| +++Hours of labor expended under work task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<materiallCost,`materiallCost`>>
//| [[slots_table.materiallCost]]<<materiallCost,`materiallCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Total material costs associated with the work task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<schedOverride,`schedOverride`>>
//| [[slots_table.schedOverride]]<<schedOverride,`schedOverride`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++If specified, override schedule and perform this task in accordance with instructions specified here.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<startedDateTime,`startedDateTime`>>
//| [[slots_table.startedDateTime]]<<startedDateTime,`startedDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time work task was started.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<taskKind,`taskKind`>>
//| [[slots_table.taskKind]]<<taskKind,`taskKind`>>
| 0..1 +
xref::enumeration/WorkTaskKind.adoc[`WorkTaskKind`]
| +++Kind of work.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<toolCost,`toolCost`>>
//| [[slots_table.toolCost]]<<toolCost,`toolCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Total tool costs associated with the work task.+++
| xref::class/WorkTask.adoc[`WorkTask`]

| <<TimeSchedules,`TimeSchedules`>>
//| [[slots_table.TimeSchedules]]<<TimeSchedules,`TimeSchedules`>>
| 0..* +
xref::class/WorkTimeSchedule.adoc[`WorkTimeSchedule`]
| +++All time schedules for this work or work task.+++
| xref::class/BaseWork.adoc[`BaseWork`]

| <<WorkActivityRecords,`WorkActivityRecords`>>
//| [[slots_table.WorkActivityRecords]]<<WorkActivityRecords,`WorkActivityRecords`>>
| 0..* +
xref::class/WorkActivityRecord.adoc[`WorkActivityRecord`]
| +++All activity records for this work or work task.+++
| xref::class/BaseWork.adoc[`BaseWork`]

| <<WorkLocation,`WorkLocation`>>
//| [[slots_table.WorkLocation]]<<WorkLocation,`WorkLocation`>>
| 0..1 +
xref::class/WorkLocation.adoc[`WorkLocation`]
| +++Location for this work/task.+++
| xref::class/BaseWork.adoc[`BaseWork`]

| <<kind,`kind`>>
//| [[slots_table.kind]]<<kind,`kind`>>
| 0..1 +
xref::enumeration/ServiceRequestKind.adoc[`ServiceRequestKind`]
| +++Kind of work.+++
| xref::class/BaseWork.adoc[`BaseWork`]

| <<priority,`priority`>>
//| [[slots_table.priority]]<<priority,`priority`>>
| 0..1 +
xref::class/Priority.adoc[`Priority`]
| +++Priority of work.+++
| xref::class/BaseWork.adoc[`BaseWork`]

| <<statusKind,`statusKind`>>
//| [[slots_table.statusKind]]<<statusKind,`statusKind`>>
| 0..1 +
xref::enumeration/WorkStatusKind.adoc[`WorkStatusKind`]
| +++Kind of work status.+++
| xref::class/BaseWork.adoc[`BaseWork`]

| <<ActivityRecord,`ActivityRecord`>>
//| [[slots_table.ActivityRecord]]<<ActivityRecord,`ActivityRecord`>>
| 0..* +
xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++
| xref::class/Document.adoc[`Document`]

| <<Approver,`Approver`>>
//| [[slots_table.Approver]]<<Approver,`Approver`>>
| 0..1 +
xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++
| xref::class/Document.adoc[`Document`]

| <<Author,`Author`>>
//| [[slots_table.Author]]<<Author,`Author`>>
| 0..1 +
xref::class/Author.adoc[`Author`]
| +++Author of this document.+++
| xref::class/Document.adoc[`Document`]

| <<ConfigurationEvents,`ConfigurationEvents`>>
//| [[slots_table.ConfigurationEvents]]<<ConfigurationEvents,`ConfigurationEvents`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++
| xref::class/Document.adoc[`Document`]

| <<Editor,`Editor`>>
//| [[slots_table.Editor]]<<Editor,`Editor`>>
| 0..1 +
xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++
| xref::class/Document.adoc[`Document`]

| <<Issuer,`Issuer`>>
//| [[slots_table.Issuer]]<<Issuer,`Issuer`>>
| 0..1 +
xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++
| xref::class/Document.adoc[`Document`]

| <<authorName,`authorName`>>
//| [[slots_table.authorName]]<<authorName,`authorName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++
| xref::class/Document.adoc[`Document`]

| <<comment,`comment`>>
//| [[slots_table.comment]]<<comment,`comment`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++
| xref::class/Document.adoc[`Document`]

| <<createdDateTime,`createdDateTime`>>
//| [[slots_table.createdDateTime]]<<createdDateTime,`createdDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++
| xref::class/Document.adoc[`Document`]

| <<docStatus,`docStatus`>>
//| [[slots_table.docStatus]]<<docStatus,`docStatus`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status'...+++
| xref::class/Document.adoc[`Document`]

| <<electronicAddress,`electronicAddress`>>
//| [[slots_table.electronicAddress]]<<electronicAddress,`electronicAddress`>>
| 0..1 +
xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++
| xref::class/Document.adoc[`Document`]

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
//| [[slots_table.lastModifiedDateTime]]<<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++
| xref::class/Document.adoc[`Document`]

| <<revisionNumber,`revisionNumber`>>
//| [[slots_table.revisionNumber]]<<revisionNumber,`revisionNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++
| xref::class/Document.adoc[`Document`]

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use...+++
| xref::class/Document.adoc[`Document`]

| <<subject,`subject`>>
//| [[slots_table.subject]]<<subject,`subject`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Document subject.+++
| xref::class/Document.adoc[`Document`]

| <<title,`title`>>
//| [[slots_table.title]]<<title,`title`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Document title.+++
| xref::class/Document.adoc[`Document`]

| <<type,`type`>>
//| [[slots_table.type]]<<type,`type`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems...+++
| xref::class/Document.adoc[`Document`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ActivityRecord,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Approver,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets on which this non-replacement work task is performed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Author,&#10548;>>
--
////


//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.authorName,&#10548;>>
--
////


//[discrete]
[#breakerMaintenanceKind]
=== `breakerMaintenanceKind`
+++Kind of breaker maintenance performed by this maintenance work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MaintenanceWorkTask.breakerMaintenanceKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/BreakerMaintenanceKind.adoc[`BreakerMaintenanceKind`]


|===

////
[.text-left]
--
<<slots_table.breakerMaintenanceKind,&#10548;>>
--
////


//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.comment,&#10548;>>
--
////


//[discrete]
[#completedDateTime]
=== `completedDateTime`
+++Date and time work task was completed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.completedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.completedDateTime,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvents,&#10548;>>
--
////


//[discrete]
[#contractorCost]
=== `contractorCost`
+++Total contractor costs associated with the work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.contractorCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.contractorCost,&#10548;>>
--
////


//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.createdDateTime,&#10548;>>
--
////


//[discrete]
[#crewETA]
=== `crewETA`
+++Estimated time of arrival, so that customer or police/fire department can be informed when the crew will arrive.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.crewETA`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.crewETA,&#10548;>>
--
////


//[discrete]
[#Crews]
=== `Crews`
+++All crews participating in this work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.Crews`
| Cardinality
| 0..*
| Type
| xref::class/Crew.adoc[`Crew`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.Crews,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.docStatus,&#10548;>>
--
////


//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Editor,&#10548;>>
--
////


//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.electronicAddress,&#10548;>>
--
////


//[discrete]
[#estimatedCompletionTime]
=== `estimatedCompletionTime`
+++Time and Date when the work task will be completed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.estimatedCompletionTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.estimatedCompletionTime,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#instruction]
=== `instruction`
+++Instructions for performing this task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.instruction`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.instruction,&#10548;>>
--
////


//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Issuer,&#10548;>>
--
////


//[discrete]
[#kind]
=== `kind`
+++Kind of work.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/ServiceRequestKind.adoc[`ServiceRequestKind`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

////
[.text-left]
--
<<slots_table.kind,&#10548;>>
--
////


//[discrete]
[#laborCost]
=== `laborCost`
+++Total labor costs associated with the work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.laborCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.laborCost,&#10548;>>
--
////


//[discrete]
[#laborHours]
=== `laborHours`
+++Hours of labor expended under work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.laborHours`
| Cardinality
| 0..1
| Type
| xref::class/Hours.adoc[`Hours`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.laborHours,&#10548;>>
--
////


//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.lastModifiedDateTime,&#10548;>>
--
////


//[discrete]
[#MaterialItems]
=== `MaterialItems`
+++The material items that are required to perform the work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.MaterialItems`
| Cardinality
| 0..*
| Type
| xref::class/MaterialItem.adoc[`MaterialItem`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.MaterialItems,&#10548;>>
--
////


//[discrete]
[#materiallCost]
=== `materiallCost`
+++Total material costs associated with the work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.materiallCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.materiallCost,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OldAsset]
=== `OldAsset`
+++Old asset replaced by this work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.OldAsset`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.OldAsset,&#10548;>>
--
////


//[discrete]
[#priority]
=== `priority`
+++Priority of work.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.priority`
| Cardinality
| 0..1
| Type
| xref::class/Priority.adoc[`Priority`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

////
[.text-left]
--
<<slots_table.priority,&#10548;>>
--
////


//[discrete]
[#ProcedureDataSet]
=== `ProcedureDataSet`
+++Procedure data set associated with this work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.ProcedureDataSet`
| Cardinality
| 0..*
| Type
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.ProcedureDataSet,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.revisionNumber,&#10548;>>
--
////


//[discrete]
[#schedOverride]
=== `schedOverride`
+++If specified, override schedule and perform this task in accordance with instructions specified here.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.schedOverride`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.schedOverride,&#10548;>>
--
////


//[discrete]
[#startedDateTime]
=== `startedDateTime`
+++Date and time work task was started.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.startedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.startedDateTime,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#statusKind]
=== `statusKind`
+++Kind of work status.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.statusKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/WorkStatusKind.adoc[`WorkStatusKind`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

////
[.text-left]
--
<<slots_table.statusKind,&#10548;>>
--
////


//[discrete]
[#subject]
=== `subject`
+++Document subject.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.subject,&#10548;>>
--
////


//[discrete]
[#SwitchingPlan]
=== `SwitchingPlan`
+++Switching plan executed by this work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.SwitchingPlan`
| Cardinality
| 0..1
| Type
| xref::class/SwitchingPlan.adoc[`SwitchingPlan`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.SwitchingPlan,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#taskKind]
=== `taskKind`
+++Kind of work.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.taskKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/WorkTaskKind.adoc[`WorkTaskKind`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.taskKind,&#10548;>>
--
////


//[discrete]
[#TimeSchedules]
=== `TimeSchedules`
+++All time schedules for this work or work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.TimeSchedules`
| Cardinality
| 0..*
| Type
| xref::class/WorkTimeSchedule.adoc[`WorkTimeSchedule`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

////
[.text-left]
--
<<slots_table.TimeSchedules,&#10548;>>
--
////


//[discrete]
[#title]
=== `title`
+++Document title.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.title,&#10548;>>
--
////


//[discrete]
[#toolCost]
=== `toolCost`
+++Total tool costs associated with the work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.toolCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.toolCost,&#10548;>>
--
////


//[discrete]
[#transformerMaintenanceKind]
=== `transformerMaintenanceKind`
+++Kind of transformer maintenance performed by this maintenance work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MaintenanceWorkTask.transformerMaintenanceKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/TransformerMaintenanceKind.adoc[`TransformerMaintenanceKind`]


|===

////
[.text-left]
--
<<slots_table.transformerMaintenanceKind,&#10548;>>
--
////


//[discrete]
[#TroubleOrder]
=== `TroubleOrder`
+++The trouble order that contains the work tasks.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.TroubleOrder`
| Cardinality
| 0..1
| Type
| xref::class/TroubleOrder.adoc[`TroubleOrder`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.TroubleOrder,&#10548;>>
--
////


//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.type,&#10548;>>
--
////


//[discrete]
[#Work]
=== `Work`
+++Work this task belongs to.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WorkTask.Work`
| Cardinality
| 1
| Type
| xref::class/Work.adoc[`Work`]

| Inherited from
| xref::class/WorkTask.adoc[`WorkTask`]


|===

////
[.text-left]
--
<<slots_table.Work,&#10548;>>
--
////


//[discrete]
[#WorkActivityRecords]
=== `WorkActivityRecords`
+++All activity records for this work or work task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.WorkActivityRecords`
| Cardinality
| 0..*
| Type
| xref::class/WorkActivityRecord.adoc[`WorkActivityRecord`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

////
[.text-left]
--
<<slots_table.WorkActivityRecords,&#10548;>>
--
////


//[discrete]
[#WorkLocation]
=== `WorkLocation`
+++Location for this work/task.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:BaseWork.WorkLocation`
| Cardinality
| 0..1
| Type
| xref::class/WorkLocation.adoc[`WorkLocation`]

| Inherited from
| xref::class/BaseWork.adoc[`BaseWork`]


|===

////
[.text-left]
--
<<slots_table.WorkLocation,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
